# svsal-bertopic

./: .gitattributes  .gitignore  01-embeddings-create.20241208.ipynb  01-embeddings-create.20250503.ipynb  01-embeddings-create.20260111.ipynb  02-embeddings-upload.20250111.ipynb  02-embeddings-upload.20260111.ipynb  02-embeddings-upload.20260208.ipynb  03-embeddings-analyse-a-dimred.20250407.ipynb  04-embeddings-analyse-b.20260111.ipynb  04-embeddings-dimred-(umap).20250407.ipynb  CHANGELOG.md  CITATION.cff  EMBEDDING_STATISTICS.md  LICENSE  PATCH_SUMMARY.md  README.md  check_cache_status.py  embeddings-create-upload.20241208.ipynb  la_openai_embeddings_20240613.pkl  la_tm_20240613.csv  la_tm_20240613.pkl  pyproject.toml  requirements.txt  stopwords-es-new-line_27.01.22.txt  template.env
bak/: LAT_Seedwords_OpenAI.ipynb  LAT_zero_topic-3.ipynb  data-api-sender-notebook-dict_claude.ipynb  requirements_orig.txt
bak/figs/: fig_barchart.html  fig_termrank.html
bak/la_tm_20240613/: config.json  ctfidf_config.json  topics.json
in-data/: 20_paragraphs_20250411.csv  all_paras_ext-100.csv  lemmata_20240322.csv  stopwords-la-new-line_27.01.22.txt
la_tm_20240613/: topic_embeddings.safetensors
