[project]
name = "embeddings-create-upload"
version = "0.1.0"
description = "A project for creating and uploading embeddings"
authors = [{name = "Andreas Wagner", email = "wagner@lhlt.mpg.de"}]
license = {text = "MIT License"}
dependencies = [
  "asyncio",
  "nest-asyncio",
  "requests",
  "jsonlines",
  "logging",
  "python-dotenv",
  "openai",
  "tiktoken",
  "cohere",
  "cohere-core",
  "bertopic",
  "jupyterlab",
  "jupyter-collaboration",
  "ipywidgets",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
