[project]
name = "embeddings-create-upload"
version = "0.1.0"
description = "A project for creating and uploading embeddings"
authors = [{name = "Andreas Wagner", email = "wagner@lhlt.mpg.de"}]
license = {text = "MIT License"}
dependencies = [
  "asyncio",
  "nest-asyncio",
  "requests",
  "jsonlines",
  "logging",
  "python-dotenv",
  "openai",
  "tiktoken",
  "cohere",
  "cohere-core",
  "bertopic",
  "jupyterlab",
  "jupyter-collaboration",
  "ipywidgets",
  "jinja2",
  "polars>=1.29.0",
  "numpy>=1.26.4",
  "tqdm>=4.67.1",
  "dotenv>=0.9.9",
  "orjson>=3.10.18",
  "ipykernel>=6.29.5",
  "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
